k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makemyday-deployment
  namespace: makemyday
  labels:
    app: makemyday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: makemyday
  template:
    metadata:
      labels:
        app: makemyday
    spec:
      containers:
        - name: makemyday
          image: 003720227935.dkr.ecr.eu-central-1.amazonaws.com/makemyday:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
      imagePullSecrets:
            - name: ecr-secret
