k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makemyday
  namespace: makemyday
spec:
  selector:
    app: makemyday
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
